- Start to fix things in graphics plot. - still difficult to handle.